fix: prevent NPE in ViewManager.getMimeTypesForLoadedPages() when LeanPageLoader returns null
Guard against null return value of LeanPageLoader.getPage() in
getMimeTypesForLoadedPages(), consistent with the existing null check
in the EagerPageLoader branch.